Update presentation component styles for responsiveness and fix alignment in identity card component

--- a/src/app/shared/components/presentation/presentation.component.scss
+++ b/src/app/shared/components/presentation/presentation.component.scss
@@ -11,7 +11,6 @@
     padding: 0 15px 30px;
     border-radius: 30px;
     margin-top: clamp(0.938rem, 0.4vw + 0.93rem, 1.375rem);
-    min-height: 95dvh;
 }
 
 @media screen and (min-width: 992px) {
@@ -21,5 +20,6 @@
         align-items: center;
         padding: 80px 30px 30px;
         gap: 0;
+        min-height: 95vh;
     }
 }
